# xsrc

./: Makefile
contrib/programs/showfont/: Imakefile
contrib/programs/viewres/: viewres.c
contrib/programs/xditview/: Dvi.c  Imakefile
contrib/programs/xeyes/: Eyes.c
contrib/programs/xfontsel/: xfontsel.c
contrib/programs/xload/: Imakefile  get_load.c
contrib/programs/xman/: Imakefile  ScrollByL.c  buttons.c  help.c  main.c  man.c  man.h  misc.c  vendor.c  vendor.h
contrib/programs/xmessage/: Imakefile  readfile.c
local/: Imakefile
local/programs/: Imakefile
xc/: INSTALL.PS  INSTALL.TXT  Imakefile  LABEL  Makefile  bug-report  registry
xc/config/: Imakefile
xc/config/cf/: Amoeba.cf  (+88 more)
xc/doc/: Imakefile
xc/fonts/: Imakefile
xc/include/: Imakefile  Xalloca.h  Xfuncs.h  Xmd.h  Xos.h  Xos_r.h  Xosdefs.h  Xpoll.h  Xproto.h  Xthreads.h  Xw32defs.h  inetfixup.h  keysym.h
xc/lib/: Imakefile
xc/nls/: Imakefile  compose.dir  locale.alias  locale.dir
xc/programs/: Imakefile
xfree/xc/: BUILD.txt  INSTALL-X.org  Imakefile  Install.txt  LICENSE.txt  Makefile  README.txt  RELNOTES  RELNOTES-X.org  RELNOTES.txt  bug-report  registry
xfree/xc/extras/Mesa/src/X86/: 3dnow.c  3dnow.h  3dnow_norm_raw.S  3dnow_xform_masked1.S  3dnow_xform_masked2.S  3dnow_xform_masked3.S  3dnow_xform_masked4.S  3dnow_xform_raw1.S  3dnow_xform_raw2.S  3dnow_xform_raw3.S  3dnow_xform_raw4.S  Makefile.am  assyntax.h  clip_args.h  common_x86.c  common_x86_asm.S  common_x86_asm.h  common_x86_features.h  katmai.c  katmai.h  mmx.h  x86.c  x86.h  x86_cliptest.S  x86_xform_masked2.S  x86_xform_masked3.S  x86_xform_masked4.S  x86_xform_raw2.S  x86_xform_raw3.S  x86_xform_raw4.S  xform_args.h
(+14696 files in other folders)
